--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "restify": "^11.1.0"
+    "restify": "^11.1.0",
+    "restify-jwt-community": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
